<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:alpha="0.7"
            android:contentDescription="@string/scanner_top_bar_description"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/cameraIcon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_photo_camera_white_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent" />

        <SurfaceView
            android:id="@+id/surfaceScanner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/AppTheme.CameraNotice"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/cameraPermissionRequiredNotice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_permission_required"
            android:textAppearance="@style/AppTheme.CameraNotice"
            app:layout_constraintBottom_toBottomOf="@+id/surfaceScanner"
            app:layout_constraintEnd_toStartOf="@+id/surfaceScanner"
            app:layout_constraintStart_toEndOf="@+id/surfaceScanner"
            app:layout_constraintTop_toBottomOf="@+id/cameraIcon" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

        <Button
            android:id="@+id/grantButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/grant_permission"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cameraPermissionRequiredNotice" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>